--- a/src/assets/board/editor.scss
+++ b/src/assets/board/editor.scss
@@ -11,22 +11,28 @@
   }
 
   h1 {
-    line-height: 1.7;
+    line-height: 2;
+    font-size: 2em;
   }
   h2 {
-    line-height: 1.6;
+    line-height: 1.9;
+    font-size: 1.8em;
   }
   h3 {
-    line-height: 1.5;
+    line-height: 1.8;
+    font-size: 1.6em;
   }
   h4 {
-    line-height: 1.4;
+    line-height: 1.7;
+    font-size: 1.4em;
   }
   h5 {
-    line-height: 1.3;
+    line-height: 1.5;
+    font-size: 1.2em;
   }
   h6 {
-    line-height: 1.2;
+    line-height: 1.3;
+    font-size: 1.1em;
   }
 
   code {
@@ -40,12 +46,13 @@
     font-family: "JetBrainsMono", monospace;
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
+    margin: 2rem 0;
 
     code {
       color: inherit;
       padding: 0;
       background: none;
-      font-size: 0.8rem;
+      font-size: 0.9rem;
     }
   }
 
