--- a/src/assets/board/editor.scss
+++ b/src/assets/board/editor.scss
@@ -4,6 +4,7 @@
   border-bottom: 1px #dddddd solid;
   padding: 20px;
   line-height: 1.8em;
+  min-height: 200px;
 
   ul,
   ol {
@@ -46,7 +47,7 @@
     font-family: "JetBrainsMono", monospace;
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
-    margin: 2rem 0;
+    margin: 1rem 0;
 
     code {
       color: inherit;
@@ -65,11 +66,12 @@
     padding-left: 1rem;
     border-left: 2px solid rgba(30, 30, 30, 0.1);
     background-color: rgba(200, 200, 200, 0.1);
+    margin: 1rem 0;
   }
 
   hr {
     border: none;
     border-top: 1px solid rgba(30, 30, 30, 0.1);
-    margin: 2rem 0;
+    margin: 1rem 0;
   }
 }
