업로드 문제 수정, 글 수정시 태그 제거 안되는 버그 수정, 디버그 출력 추가 (임시)

--- a/src/assets/board/editor.scss
+++ b/src/assets/board/editor.scss
@@ -1,4 +1,5 @@
-.tiptap {
+.tiptap,
+.tsboard {
   border-left: 1px #dddddd solid;
   border-right: 1px #dddddd solid;
   border-bottom: 1px #dddddd solid;
