--- a/src/assets/board/editor.scss
+++ b/src/assets/board/editor.scss
@@ -1,3 +1,9 @@
+.tiptap {
+  border-left: #eceff1 1px solid;
+  border-right: #eceff1 1px solid;
+  border-bottom: #eceff1 1px solid;
+}
+
 .tiptap,
 .tsboard {
   padding: 20px;
