본문 내 링크 스타일 수정

--- a/src/assets/board/editor.scss
+++ b/src/assets/board/editor.scss
@@ -4,6 +4,11 @@
   line-height: 1.8em;
   min-height: 200px;
 
+  a {
+    text-decoration: none;
+    color: #37474f;
+  }
+
   ul,
   ol {
     padding: 0 1.5rem;
