--- a/src/assets/board/editor.scss
+++ b/src/assets/board/editor.scss
@@ -51,6 +51,7 @@
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
     margin: 1rem 0;
+    overflow: scroll;
 
     code {
       color: inherit;
