--- a/src/assets/board/editor.scss
+++ b/src/assets/board/editor.scss
@@ -41,14 +41,19 @@
   }
 
   code {
-    background-color: rgba(120, 120, 120, 0.1);
-    color: #616161;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #ffffff;
+    padding: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 20px;
+    font-family: "JetBrains Mono", "IBM Plex Mono";
   }
 
   pre {
     background: #0d0d0d;
     color: #fff;
-    font-family: "JetBrainsMono", monospace;
+    font-family: "JetBrains Mono", "IBM Plex Mono";
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
     margin: 1rem 0;
