--- a/src/assets/board/editor.scss
+++ b/src/assets/board/editor.scss
@@ -47,13 +47,13 @@
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 20px;
-    font-family: "JetBrains Mono", "IBM Plex Mono";
+    font-family: "0xProto Nerd Font Mono", sans-serif;
   }
 
   pre {
     background: #0d0d0d;
     color: #fff;
-    font-family: "JetBrains Mono", "IBM Plex Mono";
+    font-family: "0xProto Nerd Font Mono", sans-serif;
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
     margin: 1rem 0;
